--- a/.github/workflows/action-run-test.yml
+++ b/.github/workflows/action-run-test.yml
@@ -3,5 +3,6 @@ on:
     branches:
       - main
 jobs:
-  - name: example job
-    run: "echo hello world"
+  first-job:
+    - name: example job
+      run: "echo hello world"
