--- a/.github/workflows/action-run-test.yml
+++ b/.github/workflows/action-run-test.yml
@@ -6,6 +6,9 @@ jobs:
   first-job:
     runs-on: ubuntu-latest
 
+    container:
+      image: debian:11.6
+
     steps:
     - name: example job
       run: "uname -a"
