--- a/action.yml
+++ b/action.yml
@@ -1,30 +1,23 @@
-name: 'Check user role'
-description: 'Check if the user is an admin, maintainer or owner of the repository'
-inputs:
-  repo_name:
-    description: 'The name of the repository'
-    default: ${{toJson(github.repository)}}
-  username:
-    description: 'The username of the user'
-    default: ${{toJson(github.actor)}}
-  token:
-    description: 'The GitHub token'
-    required: true
+name: "Check permissions"
+description: "Check the user's permissions for the repository"
+author: "Your name or organization"
 
-runs:
-  using: 'docker'
-  image: 'alpine'
-  args:
-    - 'sh'
-    - '-c'
-    - |
-      apk add --no-cache curl jq
-      sh ./entrypoint.sh ${{inputs.repo_name}} ${{inputs.username}} ${{inputs.token}}
+inputs:
+  GITHUB_TOKEN:
+    description: "The GitHub token to use to authenticate with the GitHub API"
+    required: true
 
 outputs:
   is_maintainer:
-    description: 'Whether the user is a maintainer or not'
+    description: "Whether the user is a maintainer of the repository"
   is_admin:
-    description: 'Whether the user is an admin or not'
+    description: "Whether the user is an admin of the repository"
   is_owner:
-    description: 'Whether the user is the owner of the repository or not'
+    description: "Whether the user is the owner of the repository"
+
+runs:
+  using: "docker"
+  image: "Dockerfile"
+  args:
+    - ${{ inputs.GITHUB_TOKEN }}
+
